[package]
name = "biogenie"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "compare_benchmarks"
harness = false

[dependencies]
bio = "2.2.0"
bitap = "0.2.0"
itertools = "0.14.0"
rayon = "1.10.0"
rustc-hash = "2.1.1"
memchr = "2.7.4"
nucgen = "0.1.2"
rand = "0.8.5"
timeit = "0.1.2"
twoway = "0.2.2"
csv = "1.3.1"
aho-corasick = "1.1.3"